# jcal-rs

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE  README.md
.github/workflows/: binary_release.yml  linux_package_release.yml  release.yml  test.yml
man/: scal.1.roff  sdate.1.roff  slib.3.roff  sstat.1.roff
src/: lib.rs
tests/: tests.rs
