[package]
name        = "jcal_lib"
version     = "1.2.0"
edition     = "2024"
license     = "MIT"
authors     = ["Amir Arsalan Yavari"]

[lib]
name = "jcal_lib"
path = "src/lib.rs"

[[bin]]
name = "jcal"
path = "src/bin/jcal.rs"

[[bin]]
name = "jdate"
path = "src/bin/jdate.rs"

[dependencies]
clap   = { version = "4.5.38", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.10.3"
colored = "3.0.0"
