[package]
name        = "scal_lib"
version     = "1.0.0"
edition     = "2024"
license     = "LGPLv3"
authors     = ["Amir Arsalan Yavari"]

[lib]
name = "scal_lib"
path = "src/lib.rs"

[[bin]]
name = "scal"
path = "src/bin/scal.rs"

[[bin]]
name = "sdate"
path = "src/bin/sdate.rs"

[[bin]]
name = "sstat"
path = "src/bin/sstat.rs"

[dependencies]
clap   = { version = "4.5.38", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.10.3"
colored = "3.0.0"
users = "0.11"
